2011-08-22  Nick Clifton  <nickc@redhat.com>

	* cpu/fr30.cpu: Delete.  Move to top level cpu directory.
	* cpu/fr30.opc: Likewise.
	* cpu/ip2k.cpu: Likewise.
	* cpu/ip2k.opc: Likewise.
	* cpu/mep-avc.cpu: Likewise.
	* cpu/mep-avc2.cpu: Likewise.
	* cpu/mep-c5.cpu: Likewise.
	* cpu/mep-core.cpu: Likewise.
	* cpu/mep-default.cpu: Likewise.
	* cpu/mep-ext-cop.cpu: Likewise.
	* cpu/mep-fmax.cpu: Likewise.
	* cpu/mep-h1.cpu: Likewise.
	* cpu/mep-ivc2.cpu: Likewise.
	* cpu/mep-rhcop.cpu: Likewise.
	* cpu/mep-sample-ucidsp.cpu: Likewise.
	* cpu/mep.cpu: Likewise.
	* cpu/mep.opc: Likewise.
	* cpu/openrisc.cpu: Likewise.
	* cpu/openrisc.opc: Likewise.
	* cpu/xstormy16.cpu: Likewise.
	* cpu/xstormy16.opc: Likewise.

2010-10-28  Nick Clifton<nickc@redhat.com>

	* cpu/xstormy16.cpu (alignfix-mem-far): New macro.  Like
	alignfix-mem, but works with 32-bit addresses.
	(set-alignfix-mem-far): New macro.  Like set-alignfix-mem but
	works with 32-bit addresses.
	(movfgrgri, movfgrgripostinc, movfgrgripredec, movfgrgrii,
	movfgrgriipostinc, movfgrgriipredec): Use alignfix-mem-far.
	(movfgrigr, movfgripostincgr, movfgripredecgr): Use
	set-alignfix-mem-far.
	(movfgrgriipostinc, movfgriipostincgr): Propagate addition to
	source register into base register.
	(movfgrgriipredec, movfgriipredecgr): Propagate subtraction from
	source register into base register.

2010-10-09  Matt Rice  <ratmice@gmail.com>

	* utils-cgen.scm (gen-attr-accessors): Rename bool attribute to bool_.
	* cpu/mep.opc (mep_cgen_insn_supported): Ditto.

2010-08-30  Doug Evans  <dje@sebabeach.org>

	* rtl-c.scm (s-float-predop): New function.
	(nan, qnan, snan): Call it.

2010-06-28  Alan Modra  <amodra@gmail.com>

	* cpu/mep.opc (mep_examine_ivc2_insns): Delete set but unused var.

2010-06-01  DJ Delorie  <dj@redhat.com>

	* cpu/xstormy16.cpu (movgriipostincgr, movgriipredecgr,
	movfgriipredecgr): Fix increment/decrement amount.

2010-02-12  Doug Evans  <dje@sebabeach.org>
